187 ==> 384603 - Camera Creation Date not set from EXIF data.
188 ==> 386959 - Properties view: wrong creation date [patch].
189 ==> 393970 - No mts video thumbnails.
190 ==> 393728 - Reread metadata from Video uses sidecar only.
191 ==> 393925 - UpdateSchemaFromV7ToV9 fails due to duplicate key in album_2.
192 ==> 393773 - showfoto crashes when geotagging.
193 ==> 388199 - No context menu to copy coordinates from map.
194 ==> 393399 - Windows defender freaks out in windows 10 and Edge.
195 ==> 392134 - SIGSEGV While Scanning Faces [patch].
196 ==> 394168 - OSM Search Yields No Results.
197 ==> 377719 - Cannot rename file with overwrite [patch].
198 ==> 388002 - remove kio related legacy [patch]
199 ==> 394242 - Import settings unneccesarily asks to overwrite image database, and crashes when I decline.
200 ==> 394278 - A slideshow theme for kiosk mode.
201 ==> 340389 - digiKam crashes while editing pictures for color balancing on OSX [patch].
202 ==> 394413 - Unify group handling [patch].
203 ==> 394573 - Revers geodata from open street map does not work.
204 ==> 394590 - Feature request: being able to filter on all metadatas fields.
205 ==> 394671 - Distortion on Panasonic DMC-LX15.
206 ==> 393205 - Advanced rename very slow.
207 ==> 382474 - Thumbnail regeneration.
208 ==> 394865 - digikam suspicious crash on exit.
209 ==> 390541 - Tooltip background cannot be changed.
210 ==> 391521 - "Tool-tip" box difficult to read due to default color scheme.
211 ==> 377849 - Albums disappear when the network is interrupted.
212 ==> 394988 - PgDown and PgUp hardcoded in preview mode.
213 ==> 366312 - Efficient photo tagging workflow got lost in transition from 4.x to 5.
214 ==> 395093 - Being able to export a list of paths from a selection of thumbnails.
215 ==> 395144 - When zooming in preview, face tags show on wrong places.
216 ==> 275671 - Scan single image for faces.
217 ==> 263347 - Print wizard ignores selected paper size, reverts to A4.
218 ==> 